# french-numbers

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: convert.rs  main.rs  words.rs
