[package]
name = "french-numbers"
authors = ["Neil Bryson Cargamento <neilbrysonmc@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
